# PRFlow

./: .gitignore  .venv  CHANGELOG.md  LICENSE  README.md  RELEASE.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
prflow/: __init__.py  cli.py  config.py  git.py  github.py  jira.py  llm.py  picker.py  prompts.py  template.py  types.py  update.py
prflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_cli.py  test_config.py  test_git.py  test_github.py  test_jira.py  test_llm.py  test_picker.py  test_template.py  test_update.py
