[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prflow"
version = "0.3.1"
description = "CLI tool that automates PR preparation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8",
    "rich>=13",
    "PyYAML>=6",
    "prompt_toolkit>=3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock>=3",
]

[project.scripts]
prflow = "prflow.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
