[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prflow"
version = "0.3.3"
description = "CLI tool that automates PR preparation"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8",
    "rich>=13",
    "PyYAML>=6",
    "prompt_toolkit>=3",
    "tomli>=2; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock>=3",
]

[project.scripts]
prflow = "prflow.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
reportExplicitAny = false
reportAny = false
