[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prflow"
version = "0.3.3"
description = "CLI tool that automates PR preparation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8",
    "rich>=13",
    "PyYAML>=6",
    "prompt_toolkit>=3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-mock>=3",
]

[project.scripts]
prflow = "prflow.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
reportExplicitAny = false
reportAny = false
# Environment-specific overrides
executionEnvironments = [
    {
        root = "tests",
        reportUnusedVariable = false,
        reportUnknownArgumentType = false,
        reportUnknownMemberType = false,
        reportUnknownParameterType = false,
        reportUnknownVariableType = false,
        reportUnusedCallResult = false,
        reportUnannotatedClassAttribute = false,
        reportMissingParameterType = false,
    }
]
